# invert4geom

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  environment.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_checklist.md
.github/workflows/: cd.yml  ci.yml  push.yml  pypi_release.yml  release.yml  semantic_release.yml  semantic_release_check.yml  validate-zenodo.yml
binder/: environment.yml
docs/: _invert4geom_refs.bib  api.md  citing.md  conf.py  contributing.md  environment.yml  index.md  install.md  overview.md  quickstart.ipynb  references.md  references.rst
docs/_templates/: CHANGELOG.md.j2
docs/api/: invert4geom.cross_validation.rst  invert4geom.inversion.rst  invert4geom.optimization.rst  invert4geom.plotting.rst  invert4geom.regional.rst  invert4geom.rst  invert4geom.synthetic.rst  invert4geom.uncertainty.rst  invert4geom.utils.rst
docs/examples/: index.md  topo_shift_inversion_scheme.ipynb  uieda_et_al_2017_CRUST1.ipynb  uieda_et_al_2017_synthetic.ipynb
docs/gallery/: bishop_basement_model.ipynb  index.md  uieda_et_al_2017_synthetic.ipynb
docs/how_to/: adhering_to_constraints.ipynb  adhering_to_point_measurements.ipynb  bouguer_referencing_layer.ipynb  constrain_the_inversion.ipynb  density_inversion.ipynb  determining_buffer_width.ipynb  index.md  recovering_sharp_features.ipynb  regional_over_constrained_targets.ipynb  sharpness_cross_validation.ipynb  uncertainty_parameter_sampling.ipynb  variable_density_contrast.ipynb  windowed_zref_density_optimization.ipynb
docs/template/: module.rst_t  package.rst_t
docs/tutorial/: 01_discretization.ipynb  02_simple_inversion.ipynb  03_including_starting_model.ipynb  04_damping_cross_validation.ipynb  05_density_optimization.ipynb  06_reference_level_optimization.ipynb  08_combining_it_all.ipynb  09_combining_it_all_alternative_CV_technique.ipynb  09_uncertainty_analysis.ipynb  index.md
docs/user_guide/: adhering_to_constraints.ipynb  combining_it_all.ipynb  damping_cross_validation.ipynb  density_cross_validation.ipynb  discretization.ipynb  estimating_regional_field.ipynb  including_starting_model.ipynb  index.md  reference_level_cross_validation.ipynb  simple_inversion.ipynb  variable_density_contrast.ipynb
env/: RTD_env.yml  test_env.yml  testing_env.yml
src/invert4geom/: __init__.py  cross_validation.py  inversion.py  optimization.py  plotting.py  regional.py  synthetic.py  uncertainty.py  utils.py
src/templates/: CHANGELOG.md.j2
templates/: CHANGELOG.md.j2
tests/: test_cross_validation.py  test_inversion.py  test_invert4geom.py  test_optimization.py  test_package.py  test_plotting.py  test_regional.py  test_synthetic.py  test_uncertainty.py  test_utils.py
